Change default values